k8s/db_pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: db
  labels:
    app: db
spec:
  containers:
    - name: db
      image: postgres:13
      imagePullPolicy: Always
      ports:
        - containerPort: 5432
          name: db
