k8s/db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
      name: db
  clusterIP: None
  selector:
    app: db
