k8s/my_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /demo-api/*
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 1323
